# iot-client-template-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  start-local-build-template.sh  start-local-build.sh
src/: client.rs  direct_methods.rs  iot_client_template.rs  iot_module_template.rs  lib.rs  main.rs  message.rs  systemd.rs  twin.rs
systemd/: ics-dm-iot-module-rs.service  ics-dm-iot-module-rs.timer  iot-client-template-rs.service  iot-client-template-rs.timer  iot-module-template-rs.service  iot-module-template-rs.timer
