[package]
name = "iot-client-template-rs"
version = "0.4.13"
edition = "2021"
authors = ["Joerg Zeidler <joerg.zeidler@conplement.de>", "Jan Zachmann <jan.zachmann@conplement.de>"]
repository = "git@github.com:omnect/iot-client-template-rs.git"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
#azure-iot-sdk = { git = "ssh://git@github.com/omnect/azure-iot-sdk.git", tag = "0.9.0", default-features = false }
azure-iot-sdk = { path = "../azure-iot-sdk", features = ["module_client"] }
default-env = "0.1"
env_logger = "0.8"
futures-executor = "0.3"
log = "0.4"
log-panics = { version = "2", features = ["with-backtrace"]}
network-interface = "0.1"
sd-notify = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.23", features = ["full"] }

[features]
# select if systemd ready and watchdog should be enabled
default = ["module_client", "systemd"]
systemd = ["sd-notify"]
# select either device_client, module_client or edge_client
device_client = ["azure-iot-sdk/device_client"]
module_client = ["azure-iot-sdk/module_client"]
edge_client = ["azure-iot-sdk/edge_client"]
