[package]
authors = ["omnect@conplement.de>"]
edition = "2021"
description = "This service demonstrates usage of omnect azure-iot-sdk."
homepage = "https://www.omnect.io/home"
license = "MIT OR Apache-2.0"
name = "iot-client-template-rs"
readme = "README.md"
repository = "git@github.com:omnect/iot-client-template-rs.git"
version = "0.5.3"

[dependencies]
anyhow = "1.0"
azure-iot-sdk = { git = "https://github.com/omnect/azure-iot-sdk.git", tag = "0.10.0" }
env_logger = "0.8"
futures-executor = "0.3"
futures-util = "0.3"
log = "0.4"
log-panics = { version = "2", features = ["with-backtrace"] }
sd-notify = { version = "0.4", optional = true }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
# select if systemd ready and watchdog should be enabled
default = ["module_client", "systemd"]
systemd = ["sd-notify"]
# select either device_client, module_client or edge_client
device_client = ["azure-iot-sdk/device_client"]
module_client = ["azure-iot-sdk/module_client"]
edge_client = ["azure-iot-sdk/edge_client"]
